# AutoHarness

./: AGENTS.md  Cargo.toml  README.md  README_zh-CN.md  TUTORIAL.md  TUTORIAL_zh-CN.md  autoharness.toml
benches/: lib.rs
examples/: game_harness.rs
install/: README.md  autoharness-darwin-x86_64  install.bat  install.sh  test.sh
memory/: README.md  global_principles.md
memory/templates/: adaptive.md  critic.md  ensemble.md  filter.md  policy.md  refiner.md  verifier.md
src/: lib.rs  main.rs
src/core/: action.rs  error.rs  harness.rs  mod.rs  state.rs  template.rs
src/engine/: mod.rs  search.rs  synthesis.rs  thompson.rs
src/feedback/: collector.rs  types.rs
src/memory/: backup.rs  markdown.rs  mod.rs  store.rs  types.rs
src/sandbox/: config.rs  executor.rs  limits.rs  mod.rs
src/templates/: adaptive.rs  critic.rs  ensemble.rs  filter.rs  mod.rs  policy.rs  refiner.rs  verifier.rs
tests/: integration.rs
